--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-	"name": "imagemin",
-	"version": "8.0.1",
+	"name": "@hkjeffchan/imagemin",
+	"version": "9.0.2",
 	"description": "Minify images seamlessly",
 	"license": "MIT",
 	"repository": "imagemin/imagemin",
 	"type": "module",
-	"exports": "./index.js",
 	"engines": {
 		"node": ">=12"
 	},
+	"main": "./dist/index.js",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		"default": "./dist/index.cjs",
+		"require": "./dist/index.cjs",
+		"import": "./dist/index.js",
+		"node": "./dist/index.cjs",
+		"types": "./dist/index.d.ts"
+	},
 	"scripts": {
-		"test": "xo && ava"
+		"packlist": "npx npm-packlist",
+		"build": "tsup src/index.ts",
+		"watch": "npm run build -- --watch src",
+		"test": "xo && ava",
+		"publish:lib": "npm publish --access public"
 	},
 	"files": [
-		"index.js"
+		"dist"
 	],
 	"keywords": [
 		"minify",
@@ -27,22 +40,29 @@
 		"svg"
 	],
 	"dependencies": {
-		"file-type": "^16.5.3",
-		"globby": "^12.0.0",
-		"graceful-fs": "^4.2.8",
-		"junk": "^3.1.0",
+		"file-type": "^16.5.4",
+		"globby": "^12.2.0",
+		"graceful-fs": "^4.2.10",
+		"junk": "^4.0.0",
 		"p-pipe": "^4.0.0",
 		"replace-ext": "^2.0.0",
-		"slash": "^3.0.0"
+		"slash": "^5.0.0"
 	},
 	"devDependencies": {
-		"ava": "^3.15.0",
-		"del": "^6.0.0",
+		"@types/graceful-fs": "^4.1.6",
+		"@types/replace-ext": "^2.0.0",
+		"ava": "^5.2.0",
+		"copyfiles": "^2.4.1",
+		"del": "^7.0.0",
 		"imagemin-jpegtran": "^7.0.0",
-		"imagemin-svgo": "^9.0.0",
-		"imagemin-webp": "^6.0.0",
-		"is-jpg": "^2.0.0",
-		"tempy": "^1.0.1",
-		"xo": "^0.43.0"
+		"imagemin-svgo": "^10.0.1",
+		"imagemin-webp": "^8.0.0",
+		"is-jpg": "^3.0.0",
+		"tempy": "^3.0.0",
+		"tsup": "^6.6.3",
+		"xo": "^0.53.1"
+	},
+	"publishConfig": {
+		"access": "public"
 	}
 }
