--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "@hkjeffchan/imagemin",
-	"version": "9.3.0",
+	"version": "9.3.2",
 	"description": "Minify images seamlessly",
 	"license": "MIT",
 	"repository": "imagemin/imagemin",
-	"type": "module",
+	"type": "commonjs",
 	"engines": {
 		"node": ">=12"
 	},
@@ -12,10 +12,8 @@
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"exports": {
-		"default": "./dist/index.cjs",
-		"require": "./dist/index.cjs",
-		"import": "./dist/index.js",
-		"node": "./dist/index.cjs",
+		"require": "./dist/index.js",
+		"import": "./dist/index.mjs",
 		"types": "./dist/index.d.ts"
 	},
 	"scripts": {
@@ -40,8 +38,8 @@
 		"svg"
 	],
 	"dependencies": {
-		"file-type": "^16.5.4",
-		"globby": "^12.2.0",
+		"file-type": "^18.2.1",
+		"globby": "^13.1.3",
 		"graceful-fs": "^4.2.10",
 		"junk": "^4.0.0",
 		"p-pipe": "^4.0.0",
