--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "@hkjeffchan/imagemin",
-	"version": "9.3.2",
+	"version": "9.3.3",
 	"description": "Minify images seamlessly",
 	"license": "MIT",
-	"repository": "imagemin/imagemin",
+	"repository": "https://github.com/hkjeffchan/imagemin",
 	"type": "commonjs",
 	"engines": {
 		"node": ">=12"
@@ -40,7 +40,7 @@
 	"dependencies": {
 		"file-type": "^18.2.1",
 		"globby": "^13.1.3",
-		"graceful-fs": "^4.2.10",
+		"graceful-fs": "^4.2.11",
 		"junk": "^4.0.0",
 		"p-pipe": "^4.0.0",
 		"replace-ext": "^2.0.0",
